# ACEN-Gravity

./: .env.example  .gitignore  DEVELOPING.md  README.md  alembic.ini  compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 20260515_1748_baseline_slice_schema.py
project-management/: AD_MODULE_DESIGN.md  AD_TOOLKIT_DESIGN.md  ASSUMPTIONS.md  BLOODHOUND_ANALYZER_DESIGN.md  CHANGELOG.md  DECISIONS.md  DISCOVERY_WORKSHOP_ANSWERS.md  ENTRA_MODULE_DESIGN.md  LICENSE_MODEL.md  MODULE_ARCHITECTURE.md  OPEN_QUESTIONS.md  POC_V1_SCOPE.md  PRODUCT_DESIGN.md  PROJECT_STATE.md  REVIEW_NOTES.md  RISKS.md  SECURITY_AND_GDPR.md  SILVERFORT_MODULE_DESIGN.md  TASKS.md  UI_DESIGN_DIRECTION.md  VISUAL_REFERENCES.md  WORKING_APPROACH.md
src/modules/ad/: manifest.py
src/modules/ad/parsers/: __init__.py  privileged_groups.py
src/modules/bloodhound/: analyzer.py  findings.py  manifest.py
src/modules/bloodhound/parsers/: __init__.py  sharphound.py
src/modules/entra/: manifest.py
src/modules/entra/parsers/: __init__.py  graph_bundle.py
src/modules/silverfort/: manifest.py
src/modules/silverfort/parsers/: __init__.py  export.py
src/platform_core/: __init__.py  app.py  cli.py  db.py  module_registry.py  settings.py
src/platform_core/audit/: models.py
src/platform_core/correlations/: __init__.py
src/platform_core/findings/: models.py  workflow.py
src/platform_core/identity/: models.py
src/platform_core/licensing/: catalog.py
src/platform_core/models/: __init__.py  core.py  mixins.py  registry.py
src/platform_core/scoring/: __init__.py  engine.py
src/platform_core/web/: session.py  templating.py
src/platform_core/web/routes/: findings.py  home.py  login.py  modules.py  profile.py  reports.py
src/platform_core/web/static/: styles.css
src/platform_core/web/static/img/: README.md
src/platform_core/web/templates/: audit_log.html  base.html  finding_detail.html  findings_list.html  home.html  login.html  module_ad.html  module_bloodhound.html  module_entra.html  module_silverfort.html  profile.html  report_preview.html  reports_list.html
src/platform_core/web/templates/components/: app_header.html  arc_gauge.html  flash.html  module_header.html  module_no_data.html  sample_chart.html  side_nav.html
tests/: test_slice.py  test_slice_chunk_b.py  test_slice_chunk_c.py  test_slice_chunk_d.py  test_slice_chunk_e.py  test_slice_chunk_f.py  test_smoke.py
tests/fixtures/contoso/: README.md  customer.json
tests/fixtures/contoso/ad/: manifest.json  privileged-groups.json
tests/fixtures/contoso/entra/: applications.json  conditionalAccessPolicies.json  directoryRoles.json  organization.json  roleAssignments.json  subscribedSkus.json  users.json
tests/fixtures/contoso/sharphound/: computers.json  domains.json  groups.json  users.json
tests/fixtures/contoso/silverfort/: export.json
