[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acen-gravity"
version = "0.0.1"
description = "Modular identity-security assessment platform (POC V1)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "ACEN" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "networkx>=3.4",
    "typer>=0.15",
]

[project.scripts]
gravity = "platform_core.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ARG", "SIM", "RUF"]
# E501 — line length is handled by the formatter, not the linter.
# RUF002/RUF003 — we deliberately use human-typography unicode (en dash, × etc.)
# in docstrings and comments; the chars don't appear in identifiers.
ignore = ["E501", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG"]
"src/**/manifest.py" = ["ARG"]
# B008 — typer requires `typer.Option(...)` as the default value of CLI args.
"src/platform_core/cli.py" = ["B008"]
# ARG001 — placeholder archetype builders keep their signature even when not
# all params are used yet, so the four archetypes have a uniform contract.
"src/platform_core/web/routes/modules.py" = ["ARG001"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["psycopg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
